 - Less annoying progress bar (silent when progress is fast)
 - Fix assignment operator for MeshData
 - Improved adaptive mesh refinement producing better quality meshes
0.9.0 [2009-01-05]
 - Cross-platform fixes
 - PETScMatrix::copy fix
 - Some Trilinos fixes
 - Improvements in MeshData class
 - Do not use initial guess in Newton solver
 - Change OutflowFacet to IsOutflowFacet and change syntax
 - Used shared_ptr for underling linear algebra objects
 - Cache subspaces in FunctionSpace
 - Improved plotting, now support plot(grad(u)), plot(div(u)) etc
 - Simple handling of JIT-compiled functions
 - Sign change (bug fix) in increment for Newton solver
 - New class VariationalProblem replacing LinearPDE and NonlinearPDE
 - Parallel parsing and partitioning of meshes (experimental)
 - Add script dolfin-order for ordering mesh files
 - Add new class SubSpace (replacing SubSystem)
 - Add new class FunctionSpace
 - Complete redesign of Function class hierarchy, now a single Function class
 - Increased use of shared_ptr in Function, FunctionSpace, etc
 - New interface for boundary conditions, form not necessary
 - Allow simple setting of coefficient functions based on names (not their index)
 - Don't order mesh automatically, meshes must now be ordered explicitly
 - Simpler definition of user-defined functions (constructors not necessary)
 - Make mesh iterators const to allow for const-correct Mesh code
0.8.1 [2008-10-20]
 - Add option to use ML multigrid preconditioner through PETSc
 - Interface change for ODE solvers: uBLASVector --> double*
 - Remove homotopy solver
 - Remove typedef real, now using plain double instead
 - Add various operators -=, += to GenericMatrix
 - Don't use -Werror when compiling SWIG generated code
 - Remove init(n) and init(m, n) from GenericVector/Matrix. Use resize and zero instead
 - Add new function is_combatible() for checking compatibility of boundary conditions
 - Use x as initial guess in Krylov solvers (PETSc, uBLAS, ITL)